tests/expectations/compiler/storage/external_storage_multi_deps.out
program base.aleo;

mapping val_u32__:
    key as boolean.public;
    value as u32.public;

function init:
    async init into r0;
    output r0 as base.aleo/init.future;

finalize init:
    set 99u32 into val_u32__[false];

function wipe:
    async wipe into r0;
    output r0 as base.aleo/wipe.future;

finalize wipe:
    remove val_u32__[false];

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import base.aleo;
program mid1.aleo;

struct Optional__JzunLORyB8U:
    is_some as boolean;
    val as u32;

mapping flag__:
    key as boolean.public;
    value as boolean.public;

function init:
    async init into r0;
    output r0 as mid1.aleo/init.future;

finalize init:
    set true into flag__[false];
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    assert.eq r6.is_some true;
    is.eq r6.val 99u32 into r7;
    assert.eq r7 true;

function wipe:
    async wipe into r0;
    output r0 as mid1.aleo/wipe.future;

finalize wipe:
    remove flag__[false];
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    cast false 0u32 into r7 as Optional__JzunLORyB8U;
    is.eq r6 r7 into r8;
    assert.eq r8 true;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import base.aleo;
import mid1.aleo;
program mid2.aleo;

struct Optional__JzunLORyB8U:
    is_some as boolean;
    val as u32;

struct Optional__ATAkdHctJwx:
    is_some as boolean;
    val as boolean;

mapping counter__:
    key as boolean.public;
    value as u8.public;

function init:
    async init into r0;
    output r0 as mid2.aleo/init.future;

finalize init:
    set 7u8 into counter__[false];
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    assert.eq r6.is_some true;
    is.eq r6.val 99u32 into r7;
    assert.eq r7 true;
    contains mid1.aleo/flag__[false] into r8;
    get.or_use mid1.aleo/flag__[false] false into r9;
    cast true r9 into r10 as Optional__ATAkdHctJwx;
    cast false false into r11 as Optional__ATAkdHctJwx;
    ternary r8 r10.is_some r11.is_some into r12;
    ternary r8 r10.val r11.val into r13;
    cast r12 r13 into r14 as Optional__ATAkdHctJwx;
    assert.eq r14.is_some true;
    is.eq r14.val true into r15;
    assert.eq r15 true;

function wipe:
    async wipe into r0;
    output r0 as mid2.aleo/wipe.future;

finalize wipe:
    remove counter__[false];
    contains mid1.aleo/flag__[false] into r0;
    get.or_use mid1.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__ATAkdHctJwx;
    cast false false into r3 as Optional__ATAkdHctJwx;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__ATAkdHctJwx;
    cast false false into r7 as Optional__ATAkdHctJwx;
    is.eq r6 r7 into r8;
    assert.eq r8 true;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import base.aleo;
import mid1.aleo;
import mid2.aleo;
program top.aleo;

struct Optional__JzunLORyB8U:
    is_some as boolean;
    val as u32;

struct Optional__ATAkdHctJwx:
    is_some as boolean;
    val as boolean;

struct Optional__3aph2JMPtnA:
    is_some as boolean;
    val as u8;

function test_initialized:
    async test_initialized into r0;
    output r0 as top.aleo/test_initialized.future;

finalize test_initialized:
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    assert.eq r6.is_some true;
    is.eq r6.val 99u32 into r7;
    assert.eq r7 true;
    contains mid1.aleo/flag__[false] into r8;
    get.or_use mid1.aleo/flag__[false] false into r9;
    cast true r9 into r10 as Optional__ATAkdHctJwx;
    cast false false into r11 as Optional__ATAkdHctJwx;
    ternary r8 r10.is_some r11.is_some into r12;
    ternary r8 r10.val r11.val into r13;
    cast r12 r13 into r14 as Optional__ATAkdHctJwx;
    assert.eq r14.is_some true;
    is.eq r14.val true into r15;
    assert.eq r15 true;
    contains mid2.aleo/counter__[false] into r16;
    get.or_use mid2.aleo/counter__[false] 0u8 into r17;
    cast true r17 into r18 as Optional__3aph2JMPtnA;
    cast false 0u8 into r19 as Optional__3aph2JMPtnA;
    ternary r16 r18.is_some r19.is_some into r20;
    ternary r16 r18.val r19.val into r21;
    cast r20 r21 into r22 as Optional__3aph2JMPtnA;
    assert.eq r22.is_some true;
    is.eq r22.val 7u8 into r23;
    assert.eq r23 true;

function test_fallback:
    async test_fallback into r0;
    output r0 as top.aleo/test_fallback.future;

finalize test_fallback:
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    ternary r6.is_some r6.val 0u32 into r7;
    is.eq r7 0u32 into r8;
    assert.eq r8 true;
    contains mid1.aleo/flag__[false] into r9;
    get.or_use mid1.aleo/flag__[false] false into r10;
    cast true r10 into r11 as Optional__ATAkdHctJwx;
    cast false false into r12 as Optional__ATAkdHctJwx;
    ternary r9 r11.is_some r12.is_some into r13;
    ternary r9 r11.val r12.val into r14;
    cast r13 r14 into r15 as Optional__ATAkdHctJwx;
    ternary r15.is_some r15.val false into r16;
    is.eq r16 false into r17;
    assert.eq r17 true;
    contains mid2.aleo/counter__[false] into r18;
    get.or_use mid2.aleo/counter__[false] 0u8 into r19;
    cast true r19 into r20 as Optional__3aph2JMPtnA;
    cast false 0u8 into r21 as Optional__3aph2JMPtnA;
    ternary r18 r20.is_some r21.is_some into r22;
    ternary r18 r20.val r21.val into r23;
    cast r22 r23 into r24 as Optional__3aph2JMPtnA;
    ternary r24.is_some r24.val 11u8 into r25;
    is.eq r25 11u8 into r26;
    assert.eq r26 true;

function test_none:
    async test_none into r0;
    output r0 as top.aleo/test_none.future;

finalize test_none:
    contains base.aleo/val_u32__[false] into r0;
    get.or_use base.aleo/val_u32__[false] 0u32 into r1;
    cast true r1 into r2 as Optional__JzunLORyB8U;
    cast false 0u32 into r3 as Optional__JzunLORyB8U;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__JzunLORyB8U;
    cast false 0u32 into r7 as Optional__JzunLORyB8U;
    is.eq r6 r7 into r8;
    assert.eq r8 true;
    contains mid1.aleo/flag__[false] into r9;
    get.or_use mid1.aleo/flag__[false] false into r10;
    cast true r10 into r11 as Optional__ATAkdHctJwx;
    cast false false into r12 as Optional__ATAkdHctJwx;
    ternary r9 r11.is_some r12.is_some into r13;
    ternary r9 r11.val r12.val into r14;
    cast r13 r14 into r15 as Optional__ATAkdHctJwx;
    cast false false into r16 as Optional__ATAkdHctJwx;
    is.eq r15 r16 into r17;
    assert.eq r17 true;
    contains mid2.aleo/counter__[false] into r18;
    get.or_use mid2.aleo/counter__[false] 0u8 into r19;
    cast true r19 into r20 as Optional__3aph2JMPtnA;
    cast false 0u8 into r21 as Optional__3aph2JMPtnA;
    ternary r18 r20.is_some r21.is_some into r22;
    ternary r18 r20.val r21.val into r23;
    cast r22 r23 into r24 as Optional__3aph2JMPtnA;
    cast false 0u8 into r25 as Optional__3aph2JMPtnA;
    is.eq r24 r25 into r26;
    assert.eq r26 true;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown variable `base.aleo::val_u32`
    --> compiler-test:10:20
     |
  10 |             assert(base.aleo::val_u32.unwrap() == 99u32);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `base.aleo::val_u32`
    --> compiler-test:17:20
     |
  17 |             assert(base.aleo::val_u32 == none);
     |                    ^^^^^^^^^^^^^^^^^^
